--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,13 @@ stages:
     pool:
       vmImage: 'ubuntu-20.04'
     steps:
+    
+    - task: SnykSecurityScan@1
+      inputs:
+        serviceConnectionEndpoint: 'snyk'
+        testType: 'app'
+        monitorWhen: 'always'
+        failOnIssues: true
     - task: Docker@2
       displayName: 'Build and push the image to container registry'
       inputs:
